--- a/H5C3JS/HTML复习/1-基础结构语句复习.html
+++ b/H5C3JS/HTML复习/1-基础结构语句复习.html
@@ -1,1 +1,10 @@
 <!DOCTYPE html>
+<html>
+    <title>This is a exercise</title>
+
+    <body>
+        <p>This is a exercise</p>
+        <br>
+        <a href="https://www.bilibili.com/">点击此处跳转b站</a>
+    </body>
+</html>
