--- a/H5C3JS/HTML复习/1-基础结构语句复习.html
+++ b/H5C3JS/HTML复习/1-基础结构语句复习.html
@@ -6,5 +6,13 @@
         <p>This is a exercise</p>
         <br>
         <a href="https://www.bilibili.com/">点击此处跳转b站</a>
+        <br>
+        <br>
+        <a href="https://www.bilibili.com/" target="_blank" title="bilibili">点击此处在新窗口跳转b站</a>
+        <br>
+        <br>
+        <a href="https://www.bilibili.com/" target="_blank" title="bilibili">
+            <img src="bilibili-logo.png" alt="BiliBili">
+        </a>
     </body>
 </html>
